tidied up legacy template

--- a/templates/legacy/basic/index.html
+++ b/templates/legacy/basic/index.html
@@ -12,18 +12,19 @@
             margin-top: 50px;
         }
     </style>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    <nav class="banner" :class="theme" id="ivTitleBar">
-        <a class="logo-container">
-            <img class="vis-logo" src="./assets/ImpVis-logo-white.svg">
+    <nav class="iv-title-bar learn" id="ivTitleBar">
+        <a class="iv-logo-container">
+            <img class="iv-vis-logo" src="./assets/ImpVis-logo-white.svg">
         </a>
-        <div class="vis-title">{{projectName}}</div>
+        <div class="iv-vis-title">{{projectName}}</div>
     </nav>
     <div class="iv-visualisation">
         <div class="iv-welcome-message">
-            <img src='./assets/ImpVis-logo.png' alt="ImpVisLogo" height="200"/>
-            <h1> Welcome to Imperial Visualisation!</h1>
+            <img src='./assets/ImpVis-logo.png' alt="ImpVisLogo" height="50"/>
+            <h1> Welcome to Imperial Visualisations!</h1>
             <p> Your project, {{projectName}} has succesfully been set up using the legacy template!</p>
         </div>
     </div>
