--- a/templates/legacy/basic/style.css
+++ b/templates/legacy/basic/style.css
@@ -30,7 +30,7 @@ html, body {
 
 .iv-visualisation {
     margin-top:2em;
-    height:calc(100vh -2em);
+    height:calc(100vh - 2em);
     z-index:0;
 }
 .iv-title-bar {
