added mathjs to legacy templates. added support for custom modules in script template. added error handling in the pre development stage

--- a/templates/legacy/advanced/index.html
+++ b/templates/legacy/advanced/index.html
@@ -31,6 +31,7 @@
     </script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script>
+    <script defer src="https://unpkg.com/mathjs@7.1.0/dist/math.min.js"></script>
 </head>
 
 <body>
