--- a/templates/legacy/basic/index.html
+++ b/templates/legacy/basic/index.html
@@ -13,6 +13,7 @@
         }
     </style>
     <link rel="stylesheet" href="./style.css"/>
+    <script defer src="https://unpkg.com/mathjs@7.1.0/dist/math.min.js"></script>
 </head>
 <body>
     <nav class="iv-title-bar learn" id="ivTitleBar">
