updated packages for new version

--- a/templates/script/index.html
+++ b/templates/script/index.html
@@ -29,8 +29,7 @@
 </head>
 <body>
     <div id="app">
-        <iv-title-bar>\{{projectName}}</iv-title-bar>
-        <iv-visualisation>
+        <iv-visualisation :title="projectName">
             <div class="iv-welcome-message">
                 <img src='./assets/ImpVis-logo.png' alt="ImpVisLogo" height="50"/>
                 <h1> Welcome to Imperial Visualisations!</h1>
