made sure pagename is passed as a string var to each page template

--- a/templates/script/index.html
+++ b/templates/script/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="https://unpkg.com/@impvis/components/dist/impvis-components.css"/>
     <script defer src="https://unpkg.com/vue-awesome@4.1.0/dist/vue-awesome.js"></script>
     {{#each additionalModules}}
-        {{#if_eq this 'katex' }}
+        {{#if_eq this.name 'katex' }}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
     <!-- The loading of KaTeX is deferred to speed up page rendering -->
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
     <script defer src="https://unpkg.com/@impvis/components-katex"></script>
         {{else}}
-    <script defer src="https://unpkg.com/{{this}}"></script>
+            {{#each pkgs}}
+                <script defer src="https://unpkg.com/{{this}}"></script>
+            {{/each}}
         {{/if_eq}}
     {{/each}}
 
